--- a/src/index.css
+++ b/src/index.css
@@ -92,8 +92,13 @@ form {
   -moz-text-rendering: optimizeLegibility;
   text-rendering: optimizeLegibility;
 }
+.new-todo-form {
+  display: flex;
+  margin-bottom: 0;
+}
 
 .new-todo,
+.new-todo-form .new-todo-form__timer,
 .edit {
   position: relative;
   margin: 0;
@@ -111,11 +116,26 @@ form {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.new-todo {
+.new-todo,
+.new-todo-form .new-todo-form__timer {
   padding: 16px 16px 16px 60px;
   border: none;
   background: rgba(0, 0, 0, 0.003);
   box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+}
+
+.new-todo {
+  width: 70%;
+}
+
+.new-todo-form .new-todo-form__timer {
+  width: 15%;
+	padding-left: 16px;
+  overflow: hidden;
+}
+
+.new-todo-form__button {
+  display: none;
 }
 
 .main {
@@ -233,6 +253,10 @@ form {
   color: gray;
 }
 
+.todo-list li .view {
+	position: relative;
+}
+
 .todo-list li label .description {
   word-break: break-all;
   display: block;
@@ -248,14 +272,14 @@ form {
 }
 
 .todo-list li .icon {
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  bottom: -3px;
+  bottom: -3px; */
   width: 30px;
   height: 40px;
   font-size: 34px;
   color: #cc9a9a;
-  margin: auto 0 11px;
+  margin: auto 0;
   transition: color 0.2s ease-out;
   cursor: pointer;
 }
@@ -265,7 +289,10 @@ form {
 }
 
 .todo-list li .icon-destroy {
-  right: 10px;
+	position: absolute;
+	top: 0;
+	bottom: -3px;
+	right: 10px;
 }
 
 .todo-list li .icon-destroy:after {
@@ -273,12 +300,34 @@ form {
 }
 
 .todo-list li .icon-edit {
-  font-size: 19px;
-  right: 45px;
+	position: absolute;
+	top: 0;
+	bottom: -3px;
+	font-size: 19px;
+	right: 45px;
 }
 
 .todo-list li .icon-edit:after {
   content: '✎';
+}
+
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+	font-size: 18px;
+	width: 18px;
+	height: 18px;
+}
+
+.todo-list li .icon-play {
+	font-size: 15px;
+}
+
+.icon-pause:after {
+	content: '⏸';
+}
+
+.icon-play:after {
+	content: '▶';
 }
 
 .todo-list li .edit {
@@ -393,6 +442,10 @@ html .clear-completed:active {
 
 .info a:hover {
   text-decoration: underline;
+}
+
+.timer-block {
+  margin-left: 5px;
 }
 
 /*
